hack/legacy/test/cases/06-default-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  defaultBackend:
    service:
      name: httpbin
      port:
        number: 80
  rules:
  - http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 8080
        path: /foo
        pathType: Prefix
